--- a/frontend/Dockerfile-frontend
+++ b/frontend/Dockerfile-frontend
@@ -1,8 +1,9 @@
-
 FROM node:latest
-WORKDIR /app
-ENV PATH /app/node_modules/.bin:$PATH
-COPY package.json /app/package.json
-RUN npm install
-RUN npm install @vue/cli@3.7.0 -g
-CMD ["npm", "run", "serve"]
+ADD package.json /tmp/package.json
+RUN cd /tmp && npm install
+RUN mkdir -p /code && cp -a /tmp/node_modules /code/
+RUN cd ..
+ADD  . /code
+WORKDIR ./code
+EXPOSE 8080
+CMD ["npm","run","serve"]
